// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <div>
    <form>
      <input
        id="new-todo"
        value=""
      />
      <button
        role="submit"
      >
        add
      </button>
    </form>
    <ul>
      <li
        class=""
      >
        <input
          type="checkbox"
        />
        one
      </li>
    </ul>
  </div>
</div>
`;

exports[`updates on click 1`] = `
<div>
  <div>
    <form>
      <input
        id="new-todo"
        value=""
      />
      <button
        role="submit"
      >
        add
      </button>
    </form>
    <ul />
  </div>
</div>
`;
